cluster/apps/media/overseerr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
  labels:
    app: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - name: overseerr
          image: docker.io/sctx/overseerr:develop
          imagePullPolicy: Always
          ports:
            - containerPort: 5055
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
            limits:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
