cluster/apps/media/overseerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: media
spec:
  selector:
    app: overseerr
  ports:
    - name: http
      port: 5055
      protocol: TCP
      targetPort: 5055
