cluster/apps/media/overseerr/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr-http
  namespace: media
spec:
  hostnames:
    - request.abraxis.tv
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: overseerr
          port: 5055
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
